--- a/index.html
+++ b/index.html
@@ -16,3 +16,88 @@ layout: default
 	  {% endfor %}
   </ul>
 </div> 
+
+<div id="frame" style="position: fixed; top: 0; left: 0; z-index:-999;"></div>
+<script id="shader" type="x-shader/x-fragment">
+
+#define PI 3.14159265358979
+
+// 1d random
+float random(float x) {
+	return fract( sin(x) * 1e4 );
+}
+
+// 2d random
+float random(vec2 p) {
+	return fract( sin( dot(p, vec2(12.9898, 78.233))) * 43758.5453123 );
+}
+
+vec2 truchetPattern(in vec2 _st, in float _index){
+    //_index = fract(((_index-0.5)*2.0));
+    if (_index > 0.75) {
+        _st = vec2(1.0) - _st;
+    } else if (_index > 0.5) {
+        _st = vec2(1.0-_st.x,_st.y);
+    } else if (_index > 0.25) {
+        _st = 1.0-vec2(1.0-_st.x,_st.y);
+    }
+    return _st;
+}
+
+
+void main(void) {
+	vec2 p = gl_FragCoord.xy / resolution.xy;
+	//p = p * 2. - 1.;
+
+	vec2 mouse = mouse.xy / resolution.xy;
+
+	p.x *= resolution.x / resolution.y;
+	vec3 col = vec3(.5);
+
+	p *= 1.;
+
+	p.x += sin(mouse.y);
+	p.y += cos(mouse.x)*sin(mouse.y);
+
+	vec2 ipos = floor(p * p + sin(time * .4 + mouse)); // integer
+	vec2 fpos = fract(p +  cos(time * .4) + mouse) - fract(p); // fractional
+
+	vec2 tile = truchetPattern(fpos * ipos , random(ipos));
+
+	
+	col = vec3(
+					smoothstep(tile.x-.3, tile.x, tile.y) -
+					smoothstep(tile.x, tile.x+.3, tile.y),
+					length(p - tile.x), 
+					length(p - tile)
+				);
+	
+
+	//col = vec3( length(p + tile), 1., length(length(p) - tile));
+
+	gl_FragColor = vec4(col, 1.);
+}
+
+</script>
+
+<script>
+
+window.addEventListener('load', function() {
+	var q = new QuickShader({
+		shader: document.getElementById('shader').textContent,
+		width: window.innerWidth,
+		height: window.innerHeight,
+		parentNode: '#frame'
+	});
+
+	q.play();
+
+	var resize = function() {
+		q.size(window.innerWidth, window.innerHeight);
+	};
+
+	window.addEventListener('resize', resize);
+	resize();
+});
+
+</script>
